--- a/index.html
+++ b/index.html
@@ -1,168 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>Inventory Sticker Generator</title>
-
-    <!-- SheetJS for Excel parsing -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <!-- jsPDF -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <!-- html2canvas -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
-    <style>
-      body {
-        font-family: Calibri, sans-serif;
-        margin: 20px;
-        background: #f8f9fa;
-      }
-
-      h2 {
-        margin-bottom: 10px;
-      }
-
-      input,
-      button {
-        padding: 8px 12px;
-        margin: 5px 0;
-        font-size: 14px;
-      }
-
-      button {
-        background: #007bff;
-        color: white;
-        border: none;
-        cursor: pointer;
-        border-radius: 4px;
-      }
-
-      button:hover {
-        background: #0056b3;
-      }
-
-      /* A4 Preview (210mm × 297mm = ~794×1123px at 96dpi) */
-      .page {
-        width: 794px;
-        height: 1123px;
-        background: white;
-        border: 1px solid #ccc;
-        padding: 20px;
-        margin-top: 15px;
-        box-sizing: border-box;
-        overflow: hidden;
-      }
-
-      /* Sticker grid */
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 10px;
-      }
-
-      .sticker {
-        border: 1px solid black;
-        padding: 6px;
-        font-size: 12px;
-        line-height: 1.3;
-        box-sizing: border-box;
-      }
-    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>INSTiGEN — Inventory Sticker Generator</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
-    <h2>Inventory Sticker Generator</h2>
-    <input type="file" id="excelFile" accept=".xlsx, .xls" />
-    <br />
-    <button onclick="generatePDF()">Generate PDF</button>
+    <header class="site-header" id="top">
+      <div class="header-inner">
+        <div class="brand">
+          <img src="images/logo.png" alt="INSTiGEN Logo" id="logo" />
+          <div class="brand-text">INSTiGEN</div>
+        </div>
 
-    <div id="preview" class="page"></div>
+        <nav class="main-nav" id="mainNav">
+          <a href="#home" class="nav-link active">Home</a>
+          <a href="#about" class="nav-link">About Us</a>
+          <a href="#contact" class="nav-link">Contact Us</a>
+          <a href="/generator/generator.html" class="nav-cta">Generate Now</a>
+        </nav>
+      </div>
+    </header>
 
-    <script>
-      let inventoryData = [];
-      const stickersPerPage = 24;
+    <!-- HERO / Above the fold -->
+    <section class="hero" id="home">
+      <div class="hero-inner container">
+        <div class="hero-left reveal">
+          <h1>
+            Create Inventory Stickers in Seconds —
+            <strong>Automatically</strong>
+          </h1>
+          <p class="lead">
+            Simplify your inventory management with <strong>INSTiGEN</strong>,
+            the smart sticker generator that turns your Excel data into
+            ready-to-print labels. Say goodbye to manual formatting and endless
+            copy-pasting!
+          </p>
+          <div class="hero-ctas">
+            <a class="btn primary" href="#generator">Get Started</a>
+            <a class="btn ghost" href="#about">See How It Works ↗</a>
+          </div>
+        </div>
 
-      // Handle Excel file upload
-      document
-        .getElementById("excelFile")
-        .addEventListener("change", handleFile);
+        <div class="hero-right reveal">
+          <!-- stylized illustration placeholder (SVG) -->
+          <svg
+            class="hero-ill"
+            viewBox="0 0 600 480"
+            xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
+          >
+            <defs>
+              <linearGradient id="g1" x1="0" x2="1">
+                <stop offset="0" stop-color="#AAC7D8" />
+                <stop offset="1" stop-color="#DFEBF6" />
+              </linearGradient>
+            </defs>
+            <rect
+              x="40"
+              y="40"
+              rx="16"
+              ry="16"
+              width="420"
+              height="280"
+              fill="url(#g1)"
+              opacity="0.9"
+            />
+            <!-- robot/tech abstract -->
+            <g transform="translate(260,40) scale(0.9)">
+              <circle cx="80" cy="80" r="36" fill="#768A96" />
+              <rect
+                x="-20"
+                y="140"
+                width="200"
+                height="80"
+                rx="12"
+                fill="#44576D"
+              />
+              <path
+                d="M10 10 L80 40 L150 10"
+                stroke="#29353C"
+                stroke-width="6"
+                fill="none"
+                opacity="0.6"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </section>
 
-      function handleFile(event) {
-        const file = event.target.files[0];
-        const reader = new FileReader();
+    <!-- ABOUT section -->
+    <section id="about" class="about container">
+      <div class="about-left reveal">
+        <h2>ABOUT US</h2>
+        <p class="about-text">
+          <strong>INSTiGEN</strong> was born out of a simple frustration —
+          spending hours manually copying and pasting data from Excel into Word
+          just to print inventory stickers. We created INSTiGEN to automate
+          sticker generation directly from Excel, saving time and ensuring
+          consistent output.
+        </p>
+      </div>
 
-        reader.onload = function (e) {
-          const data = new Uint8Array(e.target.result);
-          const workbook = XLSX.read(data, { type: "array" });
-          const sheet = workbook.Sheets[workbook.SheetNames[0]];
-          inventoryData = XLSX.utils.sheet_to_json(sheet);
+      <div class="about-right">
+        <div class="cards">
+          <div class="info-card reveal">
+            <div class="icon">⚙️</div>
+            <h3>Born from Everyday Frustration</h3>
+          </div>
+          <div class="info-card reveal">
+            <div class="icon">🎯</div>
+            <h3>Designed for Simplicity</h3>
+          </div>
 
-          renderPreview(0); // show first page
-        };
+          <div class="info-card reveal">
+            <div class="icon">⏱️</div>
+            <h3>Save Time, Stay Consistent</h3>
+          </div>
+          <div class="info-card reveal">
+            <div class="icon">🚀</div>
+            <h3>Empowering Smarter Workflows</h3>
+          </div>
+        </div>
+      </div>
+    </section>
 
-        reader.readAsArrayBuffer(file);
-      }
+    <!-- CONTACT / CTA block with left image + right form -->
+    <section id="contact" class="contact container reveal">
+      <div class="contact-grid">
+        <div class="contact-image" aria-hidden="true">
+          <!-- placeholder photo area -->
+          <img
+            src="https://images.unsplash.com/photo-1511910849309-8c5f0b6e7a9f?q=80&w=1000&auto=format&fit=crop"
+            alt="hands reaching"
+          />
+        </div>
 
-      // Render a single page preview
-      function renderPreview(pageIndex) {
-        const start = pageIndex * stickersPerPage;
-        const end = start + stickersPerPage;
-        const pageData = inventoryData.slice(start, end);
+        <div class="contact-form reveal">
+          <h2>Get in Touch</h2>
+          <p class="small muted">
+            We'd love to hear from you! Questions, feedback, or ideas — drop us
+            a line and we'll respond as soon as we can.
+          </p>
 
-        const container = document.getElementById("preview");
-        container.innerHTML =
-          `<div class="grid">` +
-          pageData
-            .map(
-              (item) => `
-                    <div class="sticker">
-                        Name: <b>${item.Name || ""}</b><br>
-                        SKU: ${item.SKU || ""}<br>
-                        Category: ${item.Category || ""}<br>
-                        Quantity: ${item.Quantity || ""}<br>
-                        Manufacturer: ${item.Manufacturer || ""}<br>
-                        Location: ${item.Location || ""}<br>
-                        Condition: ${item.Condition || ""}
-                    </div>
-                    `
-            )
-            .join("") +
-          `</div>`;
-      }
+          <form id="contactForm" novalidate>
+            <label class="sr-only" for="name">Name</label>
+            <input id="name" type="text" placeholder="Name" required />
 
-      // Generate paginated PDF
-      async function generatePDF() {
-        if (inventoryData.length === 0) {
-          alert("Please upload an Excel file first.");
-          return;
-        }
+            <label class="sr-only" for="email">Email</label>
+            <input
+              id="email"
+              type="email"
+              placeholder="Email Address"
+              required
+            />
 
-        const { jsPDF } = window.jspdf;
-        const pdf = new jsPDF("p", "mm", "a4");
-        const totalPages = Math.ceil(inventoryData.length / stickersPerPage);
+            <label class="sr-only" for="message">Message</label>
+            <textarea
+              id="message"
+              rows="6"
+              placeholder="Message"
+              required
+            ></textarea>
 
-        for (let i = 0; i < totalPages; i++) {
-          // Render one page
-          renderPreview(i);
+            <button type="submit" class="btn primary submit-btn">Submit</button>
+          </form>
+        </div>
+      </div>
+    </section>
 
-          // Wait a tick for DOM update
-          await new Promise((resolve) => setTimeout(resolve, 100));
+    <!-- Footer -->
+    <footer class="site-footer">
+      <div class="container footer-inner">
+        <div>INSTiGEN © 2025</div>
+        <div class="muted">Developed by itzzmerov</div>
+      </div>
+    </footer>
 
-          // Capture preview
-          const canvas = await html2canvas(document.getElementById("preview"), {
-            scale: 2,
-          });
-          const imgData = canvas.toDataURL("image/png");
-
-          const pageWidth = pdf.internal.pageSize.getWidth();
-          const pageHeight = pdf.internal.pageSize.getHeight();
-
-          if (i > 0) pdf.addPage();
-          pdf.addImage(imgData, "PNG", 0, 0, pageWidth, pageHeight);
-        }
-
-        pdf.save("inventory_stickers.pdf");
-      }
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
