Updated some sections in landing page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="site-header" id="top">
       <div class="header-inner">
         <div class="brand">
-          <img src="images/logo.png" alt="INSTiGEN Logo" id="logo" />
+          <img src="images/logo.png" alt="INSTiGEN Logo" class="logo" />
           <div class="brand-text">INSTiGEN</div>
         </div>
 
@@ -44,49 +44,11 @@
         </div>
 
         <div class="hero-right reveal">
-          <!-- stylized illustration placeholder (SVG) -->
-          <svg
-            class="hero-ill"
-            viewBox="0 0 600 480"
-            xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true"
-          >
-            <defs>
-              <linearGradient id="g1" x1="0" x2="1">
-                <stop offset="0" stop-color="#AAC7D8" />
-                <stop offset="1" stop-color="#DFEBF6" />
-              </linearGradient>
-            </defs>
-            <rect
-              x="40"
-              y="40"
-              rx="16"
-              ry="16"
-              width="420"
-              height="280"
-              fill="url(#g1)"
-              opacity="0.9"
-            />
-            <!-- robot/tech abstract -->
-            <g transform="translate(260,40) scale(0.9)">
-              <circle cx="80" cy="80" r="36" fill="#768A96" />
-              <rect
-                x="-20"
-                y="140"
-                width="200"
-                height="80"
-                rx="12"
-                fill="#44576D"
-              />
-              <path
-                d="M10 10 L80 40 L150 10"
-                stroke="#29353C"
-                stroke-width="6"
-                fill="none"
-                opacity="0.6"
-              />
-            </g>
-          </svg>
+          <img
+            src="images/hero.png"
+            alt="Picture of a laptop with a robot in it that symbolizes automation"
+            class="hero-img"
+          />
         </div>
       </div>
     </section>
@@ -131,11 +93,7 @@
     <section id="contact" class="contact container reveal">
       <div class="contact-grid">
         <div class="contact-image" aria-hidden="true">
-          <!-- placeholder photo area -->
-          <img
-            src="https://images.unsplash.com/photo-1511910849309-8c5f0b6e7a9f?q=80&w=1000&auto=format&fit=crop"
-            alt="hands reaching"
-          />
+          <img src="/images/contact_img.png" alt="hands reaching" />
         </div>
 
         <div class="contact-form reveal">
