--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
   <header class="site-header" id="top">
     <div class="header-inner">
-      <div class="brand">
-        <img src="images/logo.png" alt="INSTiGEN Logo" class="logo" />
-        <div class="brand-text">INSTiGEN</div>
-      </div>
+      <a href="#home" style="text-decoration: none;">
+        <div class="brand">
+          <img src="images/logo.png" alt="INSTiGEN Logo" class="logo" />
+          <div class="brand-text">INSTiGEN</div>
+        </div>
+      </a>
 
       <nav class="main-nav" id="mainNav">
         <a href="#home" class="nav-link active">Home</a>
@@ -39,9 +41,9 @@
           Excel data into ready-to-print labels. Say goodbye to manual formatting and endless copy-pasting!
         </p>
         <div class="hero-ctas">
-          <a class="btn primary" href="#generator">Get Started</a>
+          <a class="btn primary" href="/generator/generator.html">Get Started</a>
           <a class="btn ghost" href="#about">
-            <p class="text">See How It Works</p>
+            <p class="text">Why Choose Us?</p>
             <p class="icon">↗</p>
           </a>
         </div>
