--- a/generator/generator.html
+++ b/generator/generator.html
@@ -19,10 +19,12 @@
 <body>
   <header class="site-header" id="top">
     <div class="header-inner">
-      <div class="brand">
-        <img src="../images/logo.png" alt="INSTiGEN Logo" class="logo" />
-        <div class="brand-text">INSTiGEN</div>
-      </div>
+      <a href="../index.html" style="text-decoration: none;">
+        <div class="brand">
+          <img src="../images/logo.png" alt="INSTiGEN Logo" class="logo" />
+          <div class="brand-text">INSTiGEN</div>
+        </div>
+      </a>
 
       <nav class="main-nav" id="mainNav">
         <a href="../#home" class="nav-link">Home</a>
