--- a/index.html
+++ b/index.html
@@ -1,185 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>INSTiGEN — Inventory Sticker Generator</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <header class="site-header" id="top">
-      <div class="header-inner">
-        <a href="#home" style="text-decoration: none">
-          <div class="brand">
-            <img src="images/logo.png" alt="INSTiGEN Logo" class="logo" />
-            <div class="brand-text">INSTiGEN</div>
-          </div>
-        </a>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>INSTiGEN — Inventory Sticker Generator</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 
-        <nav class="main-nav" id="mainNav">
-          <a href="#home" class="nav-link active">Home</a>
-          <a href="#about" class="nav-link">About Us</a>
-          <a href="#contact" class="nav-link">Contact Us</a>
-          <a href="/generator/generator.html" class="nav-cta">Generate Now</a>
-        </nav>
-
-        <button id="navToggle" class="nav-toggle">☰</button>
-      </div>
-    </header>
-
-    <!-- HERO section -->
-    <section class="hero" id="home">
-      <div class="hero-inner container">
-        <div class="hero-left reveal">
-          <h1>
-            Create Inventory Stickers in Seconds —
-            <strong>Automatically</strong>
-          </h1>
-          <p class="lead">
-            Simplify your inventory management with
-            <strong><i>INSTiGEN</i></strong
-            >, the smart sticker generator that turns your Excel data into
-            ready-to-print labels. Say goodbye to manual formatting and endless
-            copy-pasting!
-          </p>
-          <div class="hero-ctas">
-            <a class="btn primary" href="/generator/generator.html"
-              >Get Started</a
-            >
-            <a class="btn ghost" href="#about">
-              <p class="text">Why Choose Us?</p>
-              <p class="icon">↗</p>
-            </a>
-          </div>
+<body>
+  <header class="site-header" id="top">
+    <div class="header-inner">
+      <a href="#home" style="text-decoration: none">
+        <div class="brand">
+          <img src="images/logo.png" alt="INSTiGEN Logo" class="logo" />
+          <div class="brand-text">INSTiGEN</div>
         </div>
+      </a>
 
-        <div class="hero-right reveal">
-          <img
-            src="images/hero.png"
-            alt="Picture of a laptop with a robot in it that symbolizes automation"
-            class="hero-img"
-          />
-        </div>
-      </div>
-    </section>
+      <nav class="main-nav" id="mainNav">
+        <a href="#home" class="nav-link active">Home</a>
+        <a href="#about" class="nav-link">About Us</a>
+        <a href="#contact" class="nav-link">Contact Us</a>
+        <a href="/generator/generator.html" class="nav-cta">Generate Now</a>
+      </nav>
 
-    <!-- ABOUT section -->
-    <section id="about" class="about container">
-      <div class="about-left reveal">
-        <h2>ABOUT US</h2>
-        <p class="about-text">
-          <strong><i>INSTiGEN</i></strong> was born out of a simple frustration
-          — spending hours manually copying and pasting data from Excel into
-          Microsoft Word just to print inventory stickers. We knew there had to
-          be a faster, smarter, and more consistent way to do it.
+      <button id="navToggle" class="nav-toggle">☰</button>
+    </div>
+  </header>
+
+  <!-- HERO section -->
+  <section class="hero" id="home">
+    <div class="hero-inner container">
+      <div class="hero-left reveal">
+        <h1>
+          Create Inventory Stickers in Seconds —
+          <strong>Automatically</strong>
+        </h1>
+        <p class="lead">
+          Simplify your inventory management with
+          <strong><i>INSTiGEN</i></strong>, the smart sticker generator that turns your Excel data into
+          ready-to-print labels. Say goodbye to manual formatting and endless
+          copy-pasting!
         </p>
-        <p class="about-text">
-          That's why we created <strong><i>INSTiGEN</i></strong> — short for
-          <i>Inventory Sticker Generator</i>. Our goal is to make inventory
-          management easier for everyone by automating the process of generating
-          printable stickers straight from your Excel data.
+        <div class="hero-ctas">
+          <a class="btn primary" href="/generator/generator.html">Get Started</a>
+          <a class="btn ghost" href="#about">
+            <p class="text">Why Choose Us?</p>
+            <p class="icon">↗</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="hero-right reveal">
+        <img src="images/hero.png" alt="Picture of a laptop with a robot in it that symbolizes automation"
+          class="hero-img" />
+      </div>
+    </div>
+  </section>
+
+  <!-- ABOUT section -->
+  <section id="about" class="about container">
+    <div class="about-left reveal">
+      <h2>ABOUT US</h2>
+      <p class="about-text">
+        <strong><i>INSTiGEN</i></strong> was born out of a simple frustration
+        — spending hours manually copying and pasting data from Excel into
+        Microsoft Word just to print inventory stickers. We knew there had to
+        be a faster, smarter, and more consistent way to do it.
+      </p>
+      <p class="about-text">
+        That's why we created <strong><i>INSTiGEN</i></strong> — short for
+        <i>Inventory Sticker Generator</i>. Our goal is to make inventory
+        management easier for everyone by automating the process of generating
+        printable stickers straight from your Excel data.
+      </p>
+    </div>
+
+    <div class="about-right">
+      <div class="cards">
+        <div class="info-card reveal">
+          <img src="images/brain_card.png" alt="Brain with logic symbol" class="card-images" />
+          <h3>Born from Everyday Frustration</h3>
+        </div>
+        <div class="info-card reveal">
+          <img src="images/gear_card.png" alt="Gear symbol" class="card-images" />
+          <h3>Designed for Simplicity</h3>
+        </div>
+
+        <div class="info-card reveal">
+          <img src="images/clock_card.png" alt="Clock symbol" class="card-images" />
+          <h3>Save Time, Stay Consistent</h3>
+        </div>
+        <div class="info-card reveal">
+          <img src="images/rocket_card.png" alt="Rocket symbol" class="card-images" />
+          <h3>Empowering Smarter Workflows</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT section -->
+  <section id="contact" class="contact container reveal">
+    <div class="contact-grid">
+      <div class="contact-image" aria-hidden="true">
+        <img src="/images/contact_img.png" alt="hands reaching" />
+      </div>
+
+      <div class="contact-form reveal">
+        <h2>Get in Touch</h2>
+        <p class="small muted">
+          We'd love to hear from you! Questions, feedback, or ideas — drop us
+          a line and we'll respond as soon as we can.
         </p>
+
+        <form id="contactForm" novalidate>
+          <label class="sr-only" for="name">Name</label>
+          <input id="name" type="text" placeholder="Name" required />
+
+          <label class="sr-only" for="email">Email</label>
+          <input id="email" type="email" placeholder="Email Address" required />
+
+          <label class="sr-only" for="message">Message</label>
+          <textarea id="message" rows="6" placeholder="Message" required></textarea>
+
+          <button type="submit" class="btn primary" id="submit-btn">
+            Submit
+          </button>
+        </form>
       </div>
+    </div>
+  </section>
 
-      <div class="about-right">
-        <div class="cards">
-          <div class="info-card reveal">
-            <img
-              src="images/brain_card.png"
-              alt="Brain with logic symbol"
-              class="card-images"
-            />
-            <h3>Born from Everyday Frustration</h3>
-          </div>
-          <div class="info-card reveal">
-            <img
-              src="images/gear_card.png"
-              alt="Gear symbol"
-              class="card-images"
-            />
-            <h3>Designed for Simplicity</h3>
-          </div>
-
-          <div class="info-card reveal">
-            <img
-              src="images/clock_card.png"
-              alt="Clock symbol"
-              class="card-images"
-            />
-            <h3>Save Time, Stay Consistent</h3>
-          </div>
-          <div class="info-card reveal">
-            <img
-              src="images/rocket_card.png"
-              alt="Rocket symbol"
-              class="card-images"
-            />
-            <h3>Empowering Smarter Workflows</h3>
-          </div>
-        </div>
+  <!-- FOOTER section -->
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <div id="copyright">INSTiGEN © 2025</div>
+      <div class="muted">
+        Developed by
+        <span><a href="https://www.github.com/itzzmerov"
+            style="color: #a9b6c2; text-decoration: none">itzzmerov</a></span>
       </div>
-    </section>
+    </div>
+  </footer>
 
-    <!-- CONTACT section -->
-    <section id="contact" class="contact container reveal">
-      <div class="contact-grid">
-        <div class="contact-image" aria-hidden="true">
-          <img src="/images/contact_img.png" alt="hands reaching" />
-        </div>
+  <script src="app.js"></script>
+</body>
 
-        <div class="contact-form reveal">
-          <h2>Get in Touch</h2>
-          <p class="small muted">
-            We'd love to hear from you! Questions, feedback, or ideas — drop us
-            a line and we'll respond as soon as we can.
-          </p>
-
-          <form id="contactForm" novalidate>
-            <label class="sr-only" for="name">Name</label>
-            <input id="name" type="text" placeholder="Name" required />
-
-            <label class="sr-only" for="email">Email</label>
-            <input
-              id="email"
-              type="email"
-              placeholder="Email Address"
-              required
-            />
-
-            <label class="sr-only" for="message">Message</label>
-            <textarea
-              id="message"
-              rows="6"
-              placeholder="Message"
-              required
-            ></textarea>
-
-            <button type="submit" class="btn primary" id="submit-btn">
-              Submit
-            </button>
-          </form>
-        </div>
-      </div>
-    </section>
-
-    <!-- FOOTER section -->
-    <footer class="site-footer">
-      <div class="container footer-inner">
-        <div id="copyright">INSTiGEN © 2025</div>
-        <div class="muted">
-          Developed by
-          <span
-            ><a
-              href="https://www.github.com/itzzmerov"
-              style="color: #a9b6c2; text-decoration: none"
-              >itzzmerov</a
-            ></span
-          >
-        </div>
-      </div>
-    </footer>
-
-    <script src="app.js"></script>
-  </body>
 </html>
