revised the mobile view and tablet view of preview panel in generator

--- a/generator/generator.html
+++ b/generator/generator.html
@@ -27,7 +27,7 @@
       </a>
 
       <nav class="main-nav" id="mainNav">
-        <a href="../#home" class="nav-link active">Home</a>
+        <a href="../#home" class="nav-link">Home</a>
         <a href="../#about" class="nav-link">About Us</a>
         <a href="../#contact" class="nav-link">Contact Us</a>
         <a href="generator.html" class="nav-cta">Generate Now</a>
