--- a/generator/generator.html
+++ b/generator/generator.html
@@ -19,7 +19,7 @@
 <body>
   <header class="site-header" id="top">
     <div class="header-inner">
-      <a href="#home" style="text-decoration: none">
+      <a href="../#home" style="text-decoration: none">
         <div class="brand">
           <img src="../images/logo.png" alt="INSTiGEN Logo" class="logo" />
           <div class="brand-text">INSTiGEN</div>
